--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     </head>
 
     <body>
+        <!-- Loading screen w/ description and start button -->
+        <section class = "Landing-Page">
+            <h1>A Test of Programming Strength</h1>
+            <h2>Hone your skills with this legendary programming quiz. Rumor has it that those who pass will be granted the title of Ultimate Programmer. Do you have what it takes? Will you prevail? Click the start button to find out...if you dare...&#128128;</h2>
+            <div class = "start-button"><button>Start&#9876;&#65039;</button></div>
+        </section>
 
         <script src="assets/script.js"></script>
     </body>
