creating and styling header with high scores link and timer

--- a/index.html
+++ b/index.html
@@ -10,10 +10,18 @@
     </head>
 
     <body>
+
+        <header>
+            <nav>
+                <div id = high-scores><a href="#saved-scores">High Scores</a></div>
+                <div id="timer">Time Remaining:</div>
+            </nav>
+        </header>
+
         <!-- Loading screen w/ description and start button -->
         <section class = "Landing-Page">
             <h1>A Test of Programming Strength</h1>
-            <h2>Hone your skills with this legendary programming quiz. Rumor has it that those who pass will be granted the title of Ultimate Programmer. Do you have what it takes? Will you prevail? Click the start button to find out...if you dare...&#128128;</h2>
+            <h2>Hone your skills with this legendary programming quiz. Rumor has it that those who pass will be granted the title of Ultimate Programmer. Do you have what it takes? Will you prevail? Click the start button to find out...if you dare...</h2>
             <div class = "start-button"><button>Start&#9876;&#65039;</button></div>
         </section>
 
