handling timer and start button

--- a/index.html
+++ b/index.html
@@ -14,16 +14,20 @@
         <header>
             <nav>
                 <div id = high-scores><a href="#saved-scores">High Scores</a></div>
-                <div id="timer">Time Remaining:</div>
+                <div id="timer"></div>
             </nav>
         </header>
 
         <!-- Loading screen w/ description and start button -->
-        <section class = "Landing-Page">
+        <section id = "Landing-Page">
             <h1>A Test of Programming Strength</h1>
             <h2>Hone your skills with this legendary programming quiz. Rumor has it that those who pass will be granted the title of Ultimate Programmer. Do you have what it takes? Will you prevail? Click the start button to find out...if you dare...</h2>
-            <div class = "start-button"><button>Start&#9876;&#65039;</button></div>
+            <div id = "start-button"><button>Start&#9876;&#65039;</button></div>
         </section>
 
-        <script src="assets/script.js"></script>
+        <section id = "Quiz">
+            <h2>[Question PlaceHolder]</h2>
+        </section>
+
+        <script src="assets/js/script.js"></script>
     </body>
