creating sections for saving and leaderboards

--- a/index.html
+++ b/index.html
@@ -26,8 +26,28 @@
         </section>
 
         <section id = "Quiz">
-            <h2>[Question PlaceHolder]</h2>
+            <h2>[placeholder]</h2>
+            <div id = "option-1"><button></button></div>
+            <div id = "option-2"><button></button></div>
+            <div id = "option-3"><button></button></div>
+            <div id = "option-4"><button></button></div>
+            <hr></hr>
+            <h2></h2>
         </section>
+
+        <section id = "mission-complete">
+            <h1>Mission Complete</h1>
+            <div id = "score"><p>[placeholder]</p></div>
+            <div id = "save-line"><p>Enter your initials: <textarea id="save-area" name="initials"></textarea></p></div>
+            <button id="save-button">save</button>  
+        </section>
+
+        <section id = "save-states">
+            <ol id="leaderboard-list"></ol>
+            <button id="back-button">save</button>  
+            <button id="clear-button">save</button>  
+        </section>
+        
 
         <script src="assets/js/script.js"></script>
     </body>
