--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
         </section>
 
         <section id = "save-states">
-            <ol id="leaderboard-list"></ol>
-            <button id="back-button">Play Again</button>  
-            <button id="clear-button">Clear Scores</button>  
+            <h1>Leaderboards</h1>
+            <ul id="leaderboard-list"></ul>
+            <button id = "play-again">Play Again</button>
         </section>
         
 
