adding to read me and making changes to saving functionality

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <body>
 
+        <!-- Display timer in header -->
         <header>
             <nav>
                 <div id="timer"></div>
@@ -24,6 +25,7 @@
             <div id = "start-button"><button>Start&#9876;&#65039;</button></div>
         </section>
 
+        <!-- Quiz section with questions and answer options -->
         <section id = "Quiz">
             <h2 id = "question"></h2>
             <div><button id = "option-1"></button></div>
@@ -35,6 +37,7 @@
             <button id = "next">Next</button>
         </section>
 
+        <!-- Section displaying score and providing an input for initials -->
         <section id = "mission-complete">
             <h1>Mission Complete</h1>
             <p id = "score"></p>
@@ -42,6 +45,7 @@
             <button id="save-button">save</button>  
         </section>
 
+        <!-- section with list of scores -->
         <section id = "save-states">
             <h1>Leaderboards</h1>
             <ul id="leaderboard-list"></ul>
